[bug fix] some of Primefaces themes don't give clear visibility when you select items on p:selectOneListbox widget; fixed it by a workaround of making an selected item underlined;

--- a/src/main/webapp/styles/custom/home.css
+++ b/src/main/webapp/styles/custom/home.css
@@ -535,3 +535,7 @@
 #sidebar-scroller {
     right: 2px;
 }
+
+.ui-selectlistbox-item.ui-state-highlight {
+    text-decoration: underline;
+}
